--- a/springBootMongo.yml
+++ b/springBootMongo.yml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: ReplicationController
+kind: Deployment
 metadata:
   labels:
     name: springboot
@@ -37,7 +37,7 @@ spec:
 ---
 #Mongo Host Path RC
 apiVersion: v1
-kind: ReplicationController
+kind: ReplicaSet
 metadata:
   labels:
     name: mongo
